common-applications/control/prow/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: prow-prod
  name: prow-prod
