common-applications/control/prow/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: deck
  namespace: prow
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: deck
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: gitee-deck
  namespace: prow
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: gitee-deck
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: gitee-hook
  namespace: prow
spec:
  ports:
  - port: 8888
  selector:
    app: gitee-hook
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: hook
  namespace: prow
spec:
  ports:
  - port: 8888
  selector:
    app: hook
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: tide
  namespace: prow
spec:
  ports:
  - port: 80
    targetPort: 8888
  selector:
    app: tide
  type: NodePort
